--- a/index.html
+++ b/index.html
@@ -59,7 +59,27 @@
             </nav>
             <!-- .nav-menu -->
         </div>
+        <footer id="footer ">
+            <div class="container cont">
+                <div class="copyright ">
+                </div>
+                <div class="credits ">
+
+                    Designed by <a href="./index.html "> Syed Yousuf</a>
+                </div>
+            </div>
+        </footer>
     </header>
+    <footer id="footer ">
+        <div class="container ">
+            <div class="copyright ">
+            </div>
+            <div class="credits ">
+
+                Designed by <a href="./index.html "> Syed Yousuf</a>
+            </div>
+        </div>
+    </footer>
 
     <!-- End Header -->
 
@@ -346,12 +366,15 @@
                                 <div class="error-message "></div>
                                 <div class="sent-message ">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center "><button type="submit ">Send Message</button></div>
+                            <div class="mx-auto" style="text-align: center;">
+                                <button type="button " class="btn btn-primary " data-toggle="button " aria-pressed="false " autocomplete="off ">
+                                Send Message
+                              </button>
+                            </div>
                         </form>
                     </div>
 
                 </div>
-
             </div>
         </section>
         <!-- End Contact Section -->
@@ -360,16 +383,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer ">
-        <div class="container ">
-            <div class="copyright ">
-            </div>
-            <div class="credits ">
 
-                Designed by <a href="./index.html "> Syed Yousuf</a>
-            </div>
-        </div>
-    </footer>
     <!-- End  Footer -->
 
     <a href="# " class="back-to-top d-flex align-items-center justify-content-center "><i class="bi bi-arrow-up-short "></i></a>
