--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <ul>
                     <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
                     <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-                    <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+                    <li class="resHide"><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                     <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
                     <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-                    <li class="download-CV"><a href="./assets/file/Syed-Yousuf.pdf" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Download</span></a></li>
+                    <li class="download-CV"><a href="./assets/file/Yousuf.pdf" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Download</span></a></li>
 
                 </ul>
             </nav>
@@ -332,7 +332,7 @@
                     </div>
 
                     <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch ">
-                        <form action="forms/contact.php " method="post " role="form " class="php-email-form ">
+                        <form method="POST" action="mailto: imyousuf89@gmail.com" enctype="multipart/form-data">
                             <div class="row ">
                                 <div class="form-group col-md-6 ">
                                     <label for="name ">Your Name</label>
@@ -352,9 +352,9 @@
                                 <textarea class="form-control " name="message " rows="10 " required></textarea>
                             </div>
                             <div class="my-3 ">
-                                <div class="loading ">Loading</div>
+                                <div class="loading "></div>
                                 <div class="error-message "></div>
-                                <div class="sent-message ">Your message has been sent. Thank you!</div>
+                                <div class="sent-message "></div>
                             </div>
                             <div class="mx-auto" style="text-align: center;">
                                 <button type="button " class="btn btn-primary " data-toggle="button " aria-pressed="false " autocomplete="off ">
