--- a/J_J.html
+++ b/J_J.html
@@ -47,12 +47,13 @@
 
             <nav id="navbar" class="nav-menu navbar">
                 <ul>
-                    <li><a href="index.html" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-                    <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-                    <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-                    <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-                    <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-                    <li class="download-CV"><a href="./assets/file/Syed-Yousuf.pdf" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Download</span></a></li>
+                    <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+                    <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+                    <li class="resHide"><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+                    <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+                    <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+                    <li class="download-CV"><a href="./assets/file/Yousuf.pdf" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Download</span></a></li>
+
                 </ul>
             </nav>
             <!-- .nav-menu -->
