--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                         </p>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 pt-2">
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>18 March 2003</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+347 2125 217</span></li>
