--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-lg-4" data-aos="fade-right">
                         <img src="assets/img/profileabout.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+                    <div class="col-lg-8 pt-4 pt-lg-0 content h-auto" data-aos="fade-left">
                         <h3>Web Designer &amp; Web Developer.</h3>
                         <p class="fst-italic">
 
